:sparkles: get productos
agregue ruta para devolver productos
