# src/controllers/producto.ts
@@ -28,3 +28,42 @@ export const crearProducto = async (
     return res.status(400).json(rpta);
   }
 };
+
+export const listarProductos = async (req: RequestCustom, res: Response) => {
+  let { pagina, porPagina } = req.query;
+  if (!pagina) {
+    pagina = "1";
+  }
+  if (!porPagina) {
+    porPagina = "2";
+  }
+  const offset = (+pagina - 1) * +porPagina;
+  const limit = +porPagina;
+
+  const [productos, total] = await Promise.all([
+    Producto.findAll({
+      limit,
+      offset,
+    }),
+    Producto.count(),
+  ]);
+
+  const itemsXPagina = +total >= +porPagina ? +porPagina : total;
+  const totalDePaginas = Math.ceil(+total / itemsXPagina);
+  const paginaPrevia = +pagina > 1 && +pagina <= total ? +pagina - 1 : null;
+  const paginaSiguiente =
+    total > 1 && +pagina < totalDePaginas ? +pagina + 1 : null;
+
+  const paginacionSerializer = {
+    porPagina: itemsXPagina,
+    total,
+    pagina: +pagina,
+    paginaPrevia,
+    paginaSiguiente,
+    totalDePaginas,
+  };
+
+  return res
+    .status(200)
+    .json({ paginacion: paginacionSerializer, data: productos });
+};
