# src/routes/producto.ts
@@ -1,10 +1,11 @@
 import { Router } from "express";
 import { productoRequestDto } from "../controllers/dto.request";
-import { crearProducto } from "../controllers/producto";
+import { crearProducto, listarProductos } from "../controllers/producto";
 import { authValidator } from "../utils/validador";
 
 export const productoRouter = Router();
 
 productoRouter
   .route("/productos")
-  .post(authValidator, productoRequestDto, crearProducto);
+  .post(authValidator, productoRequestDto, crearProducto)
+  .get(authValidator, listarProductos);
